fix overflow

--- a/ipetcare.spa/src/index.css
+++ b/ipetcare.spa/src/index.css
@@ -4,6 +4,9 @@ body {
   height: 100%;
   width: 100%;
   padding-right: 0 !important;
+}
+
+html {
   overflow: auto;
 }
 
